Adding code for bulk and batch id and partition key encryption